# electricity_pricing

./: .gitignore  README.md  exploratory_analysis.ipynb  model_development.ipynb  process_raw_data.py  pyproject.toml  random_walks.ipynb  requirements.txt
analysis/: correlations.ipynb  electricity_prices.ipynb  generation_sources.ipynb  neso_forecasts.ipynb
data/processed/: gas_prices.csv  neso_forecasts.csv
data/scripts/: collect_bmrs_data.py  collect_gas_prices.py  collect_neso_forecasts.py  collect_weather_data.py
dev/: data_loading.ipynb
docs/: data.md
etl/: bmrs_pipeline.py  gas_price_pipeline.py  met_office_pipeline.py  neso_pipeline.py
etl/test/: test_bmrs_pipeline.py  test_neso_pipeline.py
models/: gbdt.ipynb  naive.ipynb  sarimax.ipynb
notebooks/: example_ARX.ipynb  example_forecast.ipynb  exploratory_analysis.ipynb  hypothesis_tests.ipynb  model_development.ipynb  models.ipynb  random_walks.ipynb
scripts/: collect_bmrs_data.py  collect_gas_prices.py  collect_neso_forecasts.py  collect_weather_data.py  create_datasets.py
src/electricity_pricing/: eval_metrics.py  features.py  forecast.py  regressors.py  utils.py
src/electricity_pricing/data/: cleaning.py  collectors.py  loading.py  (+2 more)
tests/: test_cleaning.py  test_data.py  test_integration.py  test_models.py  test_validation.py
tests/test_data/: test_cleaning.py  test_collection.py  test_integration.py  test_validation.py
utilities/: __init__.py  bootstrap.py  datatools.py  evaluation.py  features.py  forecast.py  rolling_forecast.py
utilities.egg-info/: PKG-INFO  SOURCES.txt
(+3 files in other folders)
