[project]
name = "electricity-pricing"
version = "0.2.0"
description = "Electricity price forecasting for GB day-ahead markets"
authors = [
    {name = "christianfenton"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "holidays (>=0.82,<0.83)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
jupyter = "^1.1.1"
ipykernel = "^6.30.1"

